2001-01-29  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* struct.c (scm_make_vtable_vtable): Removed unnecessary "" from
	end of docstring.

	* struct.c (scm_struct_set_x, scm_struct_vtable_tag,
	scm_struct_vtable_name, scm_set_struct_vtable_name_x), weaks.c
	(scm_make_weak_value_hash_table, scm_make_doubly_weak_hash_table,
	scm_weak_value_hash_table_p, scm_doubly_weak_hash_table_p),
	srcprop.c (scm_source_properties, scm_set_source_properties_x,
	scm_source_property, scm_set_source_property_x), sort.c
	(scm_sort_list_x, scm_restricted_vector_sort_x, scm_sorted_p,
	scm_merge, scm_merge_x, scm_sort_x, scm_sort, scm_stable_sort_x,
	scm_stable_sort, scm_sort_list_x, scm_sort_list): Added
	docstrings.

2001-01-29  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* eval.c (SCM_APPLY): Check that primitives which take 1 arg
	really get that arg.

2001-01-26  Keisuke Nishida  <kxn30@po.cwru.edu>

	* goops.c (s_scm_get_keyword): Bug fix.

2001-01-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	The following patch was sent by Martin Grabmueller.  It makes sure
	that in case of parameter errors the correct function name is
	shown, and that parameter types are only checked once.

	* strop.c (string_copy, string_upcase_x, string_downcase_x,
	string_capitalize_x):  New functions.  Each one performs the core
	functionality of the corresponding scm_* function.

	(scm_string_copy, scm_string_upcase_x, scm_string_upcase,
	scm_string_downcase_x, scm_string_downcase,
	scm_string_capitalize_x, scm_string_capitalize):  Reduced to
	parameter checking wrappers of the above functions.

2001-01-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* continuations.c, dynl.c, keywords.c, load.c:  Include
	strings.h.  Thanks to Bill Schottstaedt for the bug report.

2001-01-25  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* backtrace.c (display_header):  Make sure that line and column
	information is shown independent of whether the port the code was
	read from had an associated filename.  Thanks to Martin