@@ -1,3 +1,7 @@
+2001-01-31  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>
+
+	* unif.c (rapr1): Don't apply scm_uniform_vector_length on arrays.
+
 2001-01-29  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>
 
 	* struct.c (scm_make_vtable_vtable): Removed unnecessary "" from
